test/parse/expr/bulk-memory-disabled.txt
;;; TOOL: wat2wasm
;;; ARGS*: --disable-bulk-memory
;;; ERROR: 1

(module
  (memory 1)
  (data $data "a")
  (func
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
    data.drop 0
    i32.const 0 i32.const 0 i32.const 0 memory.copy
    i32.const 0 i32.const 0 i32.const 0 memory.fill
  )

  (table 1 anyfunc)
  (elem $elem funcref 0)
  (elem funcref (ref.null func))
  (func
    i32.const 0 i32.const 0 i32.const 0 table.init 0
    elem.drop 0
    i32.const 0 i32.const 0 i32.const 0 table.copy
  )
)
(;; STDERR ;;;
out/test/parse/expr/bulk-memory-disabled.txt:7:4: error: passive data segments are not allowed
  (data $data "a")
   ^^^^
out/test/parse/expr/bulk-memory-disabled.txt:9:41: error: opcode not allowed: memory.init
    i32.const 0 i32.const 0 i32.const 0 memory.init 0
                                        ^^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:10:5: error: opcode not allowed: data.drop
    data.drop 0
    ^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:11:41: error: opcode not allowed: memory.copy
    i32.const 0 i32.const 0 i32.const 0 memory.copy
                                        ^^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:12:41: error: opcode not allowed: memory.fill
    i32.const 0 i32.const 0 i32.const 0 memory.fill
                                        ^^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:16:15: error: unexpected token "funcref", expected an offset expr (e.g. (i32.const 123)).
  (elem $elem funcref 0)
              ^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:17:9: error: unexpected token "funcref", expected an offset expr (e.g. (i32.const 123)).
  (elem funcref (ref.null func))
        ^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:19:41: error: opcode not allowed: table.init
    i32.const 0 i32.const 0 i32.const 0 table.init 0
                                        ^^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:20:5: error: opcode not allowed: elem.drop
    elem.drop 0
    ^^^^^^^^^
out/test/parse/expr/bulk-memory-disabled.txt:21:41: error: opcode not allowed: table.copy
    i32.const 0 i32.const 0 i32.const 0 table.copy
                                        ^^^^^^^^^^
;;; STDERR ;;)
